<resources>
    <string name="app_name">Digital Boating Tool</string>
    <string name="action_settings">Settings</string>
    <string name="latitude_hint"><![CDATA[<latitude>]]></string>
    <string name="longitude_hint"><![CDATA[<longitude>]]></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_lat_long">Invalid Latitude and/or Longitude</string>
    <string name="more">More</string>
    <string name="invalid_lat_long_title">Invalid Coordinates</string>
    <string name="invalid_lat_long_message">Make sure that the latitude and longitude are valid.  This includes making sure that each is a number written in decimal</string>
    <string name="clear">Clear</string>
    <string name="cont">Continue</string>
    <string name="shake_message">Reset Latitude and Longitude?</string>
    <string name="current_distance">Current Distance: %s</string>
    <string name="delete_marker_title">DELETE?</string>
    <string name="delete_breadcrumb_message">Are you sure you want to delete this breadcrumb?</string>
    <string name="cancel_delete">Cancel</string>
    <string name="yes_delete">DELETE</string>
    <string name="after_deletion">Breadcrumb Deleted</string>
    <string name="long_create_title">CREATE NEW BREADCRUMB?</string>
    <string name="long_create_message">Do you want to create a new Breadcrumb where you just clicked?</string>
    <string name="add_cancel">CANCEL</string>
    <string name="long_create">CREATE</string>
    <string name="current_distance_2">Current Distance: </string>
    <string name="error_act">Activity could not be found!!!!!!!!!!!!!!!!</string>
    <string name="boat_tag">BOAT</string>
    <string name="no_permission">Permission NOT granted</string>
    <string name="unsave">Image will NOT be saved to Gallery</string>
    <string name="save">Image will be saved to Gallery</string>
    <string name="breadcrumb_error">"Breadcrumb could not be made "</string>
    <string name="list">LIST</string>
    <string name="map_vis">MAP</string>
    <string name="empty_string" />
    <string name="save_string">SAVE</string>
    <string name="delete_string">Delete</string>
    <string name="bread_crumbs">Bread Crumbs</string>
    <string name="lat">Lat:</string>
    <string name="long_string">Long:</string>
    <string name="current_distance_string">current distance</string>
    <string name="list_button">LIST</string>
    <string name="add_button">ADD</string>
    <string name="picture_name_hint">Picture Name</string>
    <string name="notes_go_here_hint">Notes Go Here</string>
    <string name="notes_string">Notes</string>
    <string name="example_text">1. Don\'t touch gator\n2. Good fishing near crashed boat\n3. Avoid shaded area\n</string>
    <string name="name_default">Name...</string>
    <string name="more_features">More features will be added in the future. If you have any suggestions send an email to goebelag@rose-hulman.edu.</string>
    <string name="units">Units</string>
    <string name="auto_generate_crumbs">Auto Generate Crumbs (beta)</string>
    <string name="mi">Mi</string>
    <string name="km">Km</string>
    <string name="fastest_description">*Set 0 distance to ignore distance (better for battery), 0 time for fastest</string>
    <string name="update_distance_meters">Update Distance (meters)</string>
    <string name="update_frequency_seconds">Update Frequency (seconds)</string>
    <string name="name_default_2">Name...</string>
    <string name="description_defualt">Description...</string>
    <string name="hit_back">Hit back to choose another feature</string>
    <string name="distance_settings">Distance (feet)</string>
    <string name="distance_meters_settings">Distance (meters)</string>
    <string name="egg">Goebel was here.</string>
</resources>
